[gd_scene load_steps=4 format=3 uid="uid://cqvid2webolpt"]

[ext_resource type="Script" uid="uid://c23rr05dom4af" path="res://UI/game/game_over_screen.gd" id="1_3wi0y"]
[ext_resource type="Theme" uid="uid://bf3kkfbng2xnu" path="res://UI/ui_theme.tres" id="1_k04dw"]
[ext_resource type="PackedScene" uid="uid://c748li4srlohy" path="res://UI/game/score_indicator.tscn" id="2_m2ob0"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3wi0y")

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="MarginContainer" type="MarginContainer" parent="BackGround"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackGround/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k04dw")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "GAME OVER"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BackGround/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackGround/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k04dw")
text = "SCORE:"

[node name="ScoreIndicator" parent="BackGround/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_m2ob0")]
layout_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true
